--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
         run: npm install
 
       - name: Build project (CRA)
+        env:
+          REACT_APP_DATOCMS_API_TOKEN: ${{ secrets.REACT_APP_DATOCMS_API_TOKEN }}
         run: npm run build
 
       - name: Configure AWS credentials
